@startuml

title __ACTIVITATS's Class Diagram__\n

  namespace com.example.myplanning {
    namespace activitats {
      class com.example.myplanning.activitats.CalendariUtiles {
          {static} + selectedDate : LocalDate
          {static} + anyFromDate()
          {static} + diaMesDate()
          {static} + diesMesArray()
          {static} + mesAnyFromDate()
      }
    }
  }
  

  namespace com.example.myplanning {
    namespace activitats {
      class com.example.myplanning.activitats.MainActivity {
          - appBarConfiguration : AppBarConfiguration
          # onCreate()
      }
    }
  }
  

  com.example.myplanning.activitats.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myplanning.activitats.MainActivity o-- com.example.myplanning.databinding.MainActivityLayoutBinding : binding


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
